Use WEBHOOK_SLACK_TOKEN for Firefox-ios-ui workflow

--- a/.github/workflows/firefox-ios-ui-tests.yml
+++ b/.github/workflows/firefox-ios-ui-tests.yml
@@ -188,7 +188,7 @@ jobs:
         with:
           payload-file-path: ${{ env.browser }}/slack.json
           payload-templated: true
-          webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+          webhook: ${{ secrets.WEBHOOK_SLACK_TOKEN }}
           webhook-type: incoming-webhook
         env:
           ios_simulator: ${{ matrix.ios_simulator }}
@@ -272,7 +272,7 @@ jobs:
           with:
             payload-file-path: ${{ env.browser }}/slack.json
             payload-templated: true
-            webhook: ${{ secrets.SLACK_WEBHOOK_URL }}
+            webhook: ${{ secrets.WEBHOOK_SLACK_TOKEN }}
             webhook-type: incoming-webhook
           env:
             ios_simulator: ${{ matrix.ios_simulator }}
