--- a/bitrise.yml
+++ b/bitrise.yml
@@ -846,7 +846,7 @@ workflows:
       the rest of the builds
     meta:
       bitrise.io:
-        stack: osx-xcode-15.4.x
+        stack: osx-xcode-16.2.x-edge
         machine_type_id: g2-m1.8core
   L10nScreenshotsTests:
     steps:
@@ -891,7 +891,7 @@ workflows:
       This Workflow is to run L10n tests for all locales
     meta:
       bitrise.io:
-        stack: osx-xcode-15.4.x
+        stack: osx-xcode-16.2.x-edge
         machine_type_id: g2-m1.8core
   SPM_Deploy_Prod_Beta:
     steps:
