--- a/firefox-ios/Client/Entitlements/FirefoxApplication.entitlements
+++ b/firefox-ios/Client/Entitlements/FirefoxApplication.entitlements
@@ -9,9 +9,7 @@
 		<string>Default</string>
 	</array>
 	<key>com.apple.developer.associated-domains</key>
-	<array>
-		<string>applinks:blog.mozilla.org</string>
-	</array>
+	<array/>
 	<key>com.apple.developer.authentication-services.autofill-credential-provider</key>
 	<true/>
 	<key>com.apple.developer.networking.multipath</key>
