--- a/firefox-ios/Client/Entitlements/FirefoxBetaApplication.entitlements
+++ b/firefox-ios/Client/Entitlements/FirefoxBetaApplication.entitlements
@@ -5,9 +5,7 @@
 	<key>aps-environment</key>
 	<string>production</string>
 	<key>com.apple.developer.associated-domains</key>
-	<array>
-		<string>applinks:blog.mozilla.org</string>
-	</array>
+	<array/>
 	<key>com.apple.developer.authentication-services.autofill-credential-provider</key>
 	<true/>
 	<key>com.apple.developer.networking.multipath</key>
