--- a/.github/workflows/firefox-ios-update-effective-tld-names-file.yml
+++ b/.github/workflows/firefox-ios-update-effective-tld-names-file.yml
@@ -72,7 +72,7 @@ jobs:
         author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
         committer: GitHub <noreply@github.com>
         token: ${{ secrets.GITHUB_TOKEN }}
-        commit-message: ${{ env.pr_title }}
+        commit-message: "Refactor [v${{ env.next_version }}] Update effective_tld_names file ${{ env.current_date }}"
         title: "Refactor [v${{ env.next_version }}] Update effective_tld_names file ${{ env.current_date }}"
         branch: ${{ env.branch_name }}
         body: ${{ env.pr_body }}
