Add FXIOS-10902 Firefox iOS: Send data deletion request when DAU ping is toggled off

--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -752,6 +752,7 @@ usage:
     expires: never
     send_in_pings:
       - usage-reporting
+      - usage-deletion-request
 
   duration:
     type: timing_distribution
