--- a/firefox-ios/Client/pings.yaml
+++ b/firefox-ios/Client/pings.yaml
@@ -114,3 +114,27 @@ onboarding-opt-out:
   metadata:
     follows_collection_enabled: false
     include_info_sections: false
+    
+usage-deletion-request:
+  description: |
+    This ping is submitted when a user opts out of sending usage
+    frequency of Firefox to Mozilla.
+    Sent in response to user action.
+  include_client_id: false
+  send_if_empty: true
+  bugs:
+    - https://bugzilla.mozilla.org/show_bug.cgi?id=1932643
+  data_reviews:
+    - https://bugzilla.mozilla.org/show_bug.cgi?id=1932643
+  notification_emails:
+    - glean-team@mozilla.com
+    - jrediger@mozilla.com
+    - loines@mozilla.com
+  metadata:
+    follows_collection_enabled: false
+    include_info_sections: false
+  reasons:
+    set_upload_enabled: |
+      The ping was submitted between Glean init and Glean shutdown.
+      After init but before shutdown the upload of usage reporting data changed
+      from enabled to disabled.
