[MOB-3113] Temporarily deploy upgraded app to AppCenter

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -109,5 +109,5 @@ workflows:
           filters:
             branches:
               only: 
-                - /^.*main.*/
+                - /^.*mob-3113-firefox-upgrade-133.*/
           context: napps
