Bugfix [Move Shared package] FXIOS-11082 AppConstants not reading current swift flags (#24202)
* Fix app constants, Add CHANNEL to plist and config files

* Update firefox-ios/Client/Info.plist

---------

Co-authored-by: Filippo <fzazzeroni@mozilla.com>
Co-authored-by: Nishant Bhasin <nish.bhasin@gmail.com>

--- a/firefox-ios/Client/Info.plist
+++ b/firefox-ios/Client/Info.plist
@@ -51,6 +51,8 @@
 	</array>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>CHANNEL</key>
+	<string>$(CHANNEL)</string>
 	<key>INIntentsSupported</key>
 	<array>
 		<string>QuickActionIntent</string>
