Enabling JS refactor in release builds

--- a/firefox-ios/nimbus-features/jsAlertRefactor.yaml
+++ b/firefox-ios/nimbus-features/jsAlertRefactor.yaml
@@ -8,7 +8,7 @@ features:
         description: >
           When true this enables the new JS alerts system to be used
         type: Boolean
-        default: false
+        default: true
     defaults:
       - channel: beta
         value:
