Add FXIOS-9203 enhanced tracking protection panel telemetry (#20371)

--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -4353,6 +4353,83 @@ tracking_protection:
     notification_emails:
       - fx-ios-data-stewards@mozilla.com
     expires: "2025-07-01"
+  show_clear_cookies_alert:
+    type: event
+    description: |
+      Records when the clear cookies alert is shown
+    bugs:
+      - https://github.com/mozilla-mobile/firefox-ios/issues/20371
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/14102
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-07-01"
+  show_etp_details:
+    type: event
+    description: |
+      Records when the enhanced tracking protection details screen is shown
+    bugs:
+      - https://github.com/mozilla-mobile/firefox-ios/issues/20371
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/14102
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-07-01"
+  show_etp_blocked_trackers_details:
+    type: event
+    description: |
+      Records when the enhanced tracking protection blocked trackers details screen is shown
+    bugs:
+      - https://github.com/mozilla-mobile/firefox-ios/issues/20371
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/14102
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-07-01"
+  show_etp_settings:
+    type: event
+    description: |
+      Records when the enhanced tracking protection settings screen is shown
+    bugs:
+      - https://github.com/mozilla-mobile/firefox-ios/issues/20371
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/14102
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-07-01"
+  tapped_clear_cookies:
+    type: event
+    description: |
+      Records when the clear cookies button from the etp alert is tapped.
+    bugs:
+      - https://github.com/mozilla-mobile/firefox-ios/issues/20371
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/14102
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-07-01"
+  dismiss_etp_panel:
+    type: event
+    description: |
+      Records when the enhanced tracking protection panel is dismissed
+    bugs:
+      - https://github.com/mozilla-mobile/firefox-ios/issues/20371
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/14102
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-07-01"
+  show_certificates:
+    type: event
+    description: |
+      Records when the certificates screen from the enhanced tracking protection panel is shown
+    bugs:
+      - https://github.com/mozilla-mobile/firefox-ios/issues/20371
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/14102
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-07-01"
 # iOS 14 widget metrics
 # m: medium, s: small, l: large
 widget:
