--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,5 +1,6 @@
 only_rules: # Only enforce these rules, ignore all others
-  - line_length
+  # Ecosia: disabled
+  # - line_length
   - blanket_disable_command
   - class_delegate_protocol
   - closure_spacing
