--- a/firefox-ios/Client/Configuration/FirefoxBeta.xcconfig
+++ b/firefox-ios/Client/Configuration/FirefoxBeta.xcconfig
@@ -9,5 +9,5 @@ MOZ_BUNDLE_DISPLAY_NAME = Firefox Beta
 MOZ_BUNDLE_ID = org.mozilla.ios.FirefoxBeta
 CODE_SIGN_ENTITLEMENTS = Client/Entitlements/FirefoxBetaApplication.entitlements
 CHANNEL = BETA
-OTHER_SWIFT_FLAGS = $(OTHER_SWIFT_FLAGS_common) -DMOZ_CHANEL_$(CHANNEL)
+OTHER_SWIFT_FLAGS = $(OTHER_SWIFT_FLAGS_common) -DMOZ_CHANNEL_$(CHANNEL)
 MOZ_INTERNAL_URL_SCHEME = firefox-beta
