Settings page, too

--- a/firefox-ios/nimbus-features/tosFeature.yaml
+++ b/firefox-ios/nimbus-features/tosFeature.yaml
@@ -12,7 +12,7 @@ features:
     defaults:
       - channel: beta
         value:
-          status: true
+          status: false
       - channel: developer
         value:
           status: true
