[MOB-3158] Review Upgrade TODO comments (#833)
* [MOB-3158] Flag comments related to [MOB-3152] Refactor Ecosia theming

* [MOB-3158] Flag comments related to [MOB-3166] Review if migrations are needed

* [MOB-3158] Replace LegacyResizableButton with ResizableButton

* [MOB-3158] Delete unused L10N scripts

* [MOB-3158] Remove unnecessary TopSiteItemCell comment

* [MOB-3158] Update privateMode image everywhere on the app

* [MOB-3158] Keep necessary tab cell header effect

* [MOB-3158] Update search button image

* [MOB-3158] Hardcode search terms config in right place

* [MOB-3158] Remove unnecessary menuBadge comment

* [MOB-3158] Flag comments related to [MOB-3170] Review widgets

* [MOB-3158] Remove unnecessary TabToolbar comments

* [MOB-3158] Add upgrade branch to merge tests and lint

--- a/.github/workflows/merge_tests.yml
+++ b/.github/workflows/merge_tests.yml
@@ -2,7 +2,7 @@ name: Merge Unit Tests
 
 on:
   pull_request:
-    branches: [ main ]
+    branches: [ main, mob-3113-firefox-upgrade-133 ]
 
 jobs:
   execute_merge_tests:
