Add FXIOS-10902 Firefox iOS send data deletion request when dau ping is toggled off
Add missing suggestion change

--- a/firefox-ios/Client/pings.yaml
+++ b/firefox-ios/Client/pings.yaml
@@ -135,6 +135,5 @@ usage-deletion-request:
     include_info_sections: false
   reasons:
     set_upload_enabled: |
-      The ping was submitted between Glean init and Glean shutdown.
-      After init but before shutdown the upload of usage reporting data changed
-      from enabled to disabled.
+      The ping was submitted due to the usage-reporting data preference changing from
+      enabled to disabled.
