--- a/.github/workflows/update-bitrise-steps.yml
+++ b/.github/workflows/update-bitrise-steps.yml
@@ -2,9 +2,13 @@ name: Update Outdated Bitrise Steps Versions
 
 on:
   schedule:
-   - cron: "0 3 * * 0" # Runs every Sunday at 03:00 UTC
+    - cron: "0 3 * * 0" # Runs every Sunday at 03:00 UTC
   workflow_dispatch: # Allow manual triggering
-
+    inputs:
+      branchName:
+        description: 'Branch used as target for automation'
+        required: true
+        default: 'main'
 jobs:
   update-steps:
     runs-on: ubuntu-latest
@@ -34,7 +38,7 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
-      # Step 5: Determine the PR Version Number
+      # Step 5: Determine PR Version Number
       - name: Determine PR Version Number
         id: versioning
         run: |
@@ -52,24 +56,25 @@ jobs:
       # Step 6: Check for changes
       - name: Commit changes if any
         run: |
-          git config user.name "github-actions[bot]"
-          git config user.email "github-actions[bot]@users.noreply.github.com"
           git diff
-          git diff --quiet || (git add bitrise.yml && git commit -m "Update outdated Bitrise steps")
+          git diff --quiet || (git add bitrise.yml)
 
       # Step 7: Create a Pull Request
       - name: Create a Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
-          token: ${{ secrets.GITHUB_TOKEN }}
-          branch: update/bitrise-steps
           commit-message: "Update [v${{ env.next_version }}] outdated Bitrise steps ${{ env.current_date }}"
+          author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
+          committer: GitHub <noreply@github.com>
+          token: ${{ secrets.GITHUB_TOKEN }}
+          branch: update-bitrise-steps-${{ env.next_version }}
           title: "Bump [v${{ env.next_version }}] Update outdated Bitrise steps ${{ env.current_date }}"
+          delete-branch: true
           body: |
             This PR updates the outdated Bitrise steps to their latest versions.
-          reviewers: mdotb-moz,clarmso,isabelrios
-
-        # Step 8: Send a message to slack if there is a failure
+          reviewers: mdotb-moz,isabelrios,clarmso
+          
+      # Step 8: Send a message to slack if there is a failure
   notify-on-failure:
     runs-on: ubuntu-latest
     needs: update-steps
@@ -88,4 +93,3 @@ jobs:
           GITHUB_RUNID: ${{ github.run_id }}
           GITHUB_REF_NAME: ${{ github.ref_name }}
           GITHUB_SHA: ${{ github.sha }}
-            
