--- a/.github/workflows/update-bitrise-steps.yml
+++ b/.github/workflows/update-bitrise-steps.yml
@@ -16,7 +16,10 @@ jobs:
     steps:
       # Step 1: Check out the repository
       - name: Checkout repository
-        uses: actions/checkout@v3
+        uses: actions/checkout@v4
+        with:
+            persist-credentials: false
+            token: ${{ secrets.GITHUB_TOKEN }}
 
       # Step 2: Set up Python
       - name: Set up Python
@@ -38,6 +41,13 @@ jobs:
         env:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
 
+      - name: Script to check if branch exists to not commit again
+        run: |-
+           branch=$(curl -X GET -s -H "Accept: application/vnd.github.v3+json" https://api.github.com/repos/mozilla-mobile/firefox-ios/branches?per_page=100 | jq -r '.[].name | select(contains("update-bitrise-steps-${{ env.next_version }}"))')
+           echo $branch
+           if [ -z "$branch" ]; then echo "BRANCH_CREATED=false" >> $GITHUB_ENV; else echo "BRANCH_CREATED=true"  >> $GITHUB_ENV;fi
+
+
       # Step 5: Determine PR Version Number
       - name: Determine PR Version Number
         id: versioning
@@ -55,6 +65,7 @@ jobs:
 
       # Step 6: Check for changes
       - name: Commit changes if any
+        if: env.BRANCH_CREATED == 'false'
         run: |
           git diff
           git diff --quiet || (git add bitrise.yml)
@@ -62,6 +73,7 @@ jobs:
       # Step 7: Create a Pull Request
       - name: Create a Pull Request
         uses: peter-evans/create-pull-request@v6
+        if: env.BRANCH_CREATED == 'false'
         with:
           commit-message: "Update [v${{ env.next_version }}] outdated Bitrise steps ${{ env.current_date }}"
           author: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>
