--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -755,7 +755,7 @@ usage:
       - usage-deletion-request
 
   duration:
-    type: timing_distribution
+    type: timespan
     time_unit: millisecond
     description: |
       The duration of the last foreground session.
