--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -5513,6 +5513,24 @@ share_sheet:
           Whether the user is opted in to the Sent from Firefox experiment.
           Only returns true if the user is both enrolled and opted in.
 
+# Share related metrics
+
+share:
+  deeplink_open_url_load_time:
+    type: timing_distribution
+    lifetime: application
+    description: |
+      Tracks the startup time of the application when the app was launched to open a url.
+    bugs:
+      - https://github.com/mozilla-mobile/firefox-ios/issues/24325
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/issues/24325
+    data_sensitivity:
+      - technical
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: never
+
 # Device specific metrics
 
 device:
