--- a/focus-ios/Blockzilla/pings.yaml
+++ b/focus-ios/Blockzilla/pings.yaml
@@ -34,7 +34,7 @@ dau-reporting:
 
 usage-reporting:
   description: |
-    Minimal ping to measure DAU.
+    Minimal ping to measure the usage frequency of Focus.
     Sent on the baseline schedule.
   include_client_id: false
   send_if_empty: true
@@ -48,9 +48,18 @@ usage-reporting:
     - jrediger@mozilla.com
     - loines@mozilla.com
   metadata:
+    follows_collection_enabled: false
     include_info_sections: false
-    ping_schedule:
-      - baseline
+  reasons:
+    dirty_startup: |
+      Defined to avoid error logging.
+      *Note*: this ping will not actually send a ping reason.
+    inactive: |
+      Defined to avoid error logging.
+      *Note*: this ping will not actually send a ping reason.
+    active: |
+      Defined to avoid error logging.
+      *Note*: this ping will not actually send a ping reason.
 
 usage-deletion-request:
   description: |
