--- a/firefox-ios/Client/pings.yaml
+++ b/firefox-ios/Client/pings.yaml
@@ -74,7 +74,7 @@ dau-reporting:
 
 usage-reporting:
   description: |
-    Minimal ping to measure DAU.
+    Minimal ping to measure the usage frequency of Firefox.
     Sent on the baseline schedule.
   include_client_id: false
   send_if_empty: true
@@ -88,9 +88,18 @@ usage-reporting:
     - jrediger@mozilla.com
     - loines@mozilla.com
   metadata:
+    follows_collection_enabled: false
     include_info_sections: false
-    ping_schedule:
-      - baseline
+  reasons:
+    dirty_startup: |
+      Defined to avoid error logging.
+      *Note*: this ping will not actually send a ping reason.
+    inactive: |
+      Defined to avoid error logging.
+      *Note*: this ping will not actually send a ping reason.
+    active: |
+      Defined to avoid error logging.
+      *Note*: this ping will not actually send a ping reason.
 
 onboarding-opt-out:
   description: |
