Add FXIOS-11179 [Dark Mode] Use darkreader for webviews (#24327)
* chore: add darkreader lib

* feat: add nimbus flag

* feat: pass down flag to JS

* feat: move old code to LegacyNightModeHelper and add logic to pick treatment

* fix: lint

* fix: wrong flag value

* fix: cleanup flag check

* fix: typo

Co-authored-by: Nishant Bhasin <nish.bhasin@gmail.com>

* fix: remove vim modeline

Co-authored-by: Nishant Bhasin <nish.bhasin@gmail.com>

* chore: add license

* chore: move night mode to separate dir

* feat: isolate nightmode into its own content world

* fix: update mocks

* fix: downgrade darkreader to previous version

---------

Co-authored-by: Nishant Bhasin <nish.bhasin@gmail.com>
(cherry picked from commit 3fbead0c5c17e64cb25f8d49d12573dd16b43c8a)

# Conflicts:
#	firefox-ios/Client/FeatureFlags/NimbusFlaggableFeature.swift

--- a/firefox-ios/nimbus.fml.yaml
+++ b/firefox-ios/nimbus.fml.yaml
@@ -18,6 +18,7 @@ include:
   - nimbus-features/autofillFeature.yaml
   - nimbus-features/bookmarkRefactorFeature.yaml
   - nimbus-features/contextualHintFeature.yaml
+  - nimbus-features/darkReaderFeature.yaml
   - nimbus-features/fakespotFeature.yaml
   - nimbus-features/feltPrivacyFeature.yaml
   - nimbus-features/firefoxSuggestFeature.yaml
