Add FXIOS-11168 [Content Sharing Opt] Telemetry to track start up time for deeplinks (#24422)
* Add telemetry for deeplink, refactor ShareTelemetry to include deep links recording and GleanWrapper dependency

* Added correct startup open url time record

* Added test for Share Telemetry

* Remove unused code and added data review link

* Update record startup time telemetry name and code

* Correct typo

---------

Co-authored-by: Filippo <fzazzeroni@mozilla.com>
(cherry picked from commit d17d22be93089591ed10197d78891304985b33ee)

# Conflicts:
#	firefox-ios/Client/Application/AppDelegate.swift
#	firefox-ios/Client/Frontend/Browser/BrowserViewController/Views/BrowserViewController.swift

--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -5173,6 +5173,23 @@ share_sheet:
           Whether the user is opted in to the Sent from Firefox experiment.
           Only returns true if the user is both enrolled and opted in.
 
+# Share related metrics
+
+share:
+  deeplink_open_url_startup_time:
+    type: timing_distribution
+    description: |
+      Track the startup time of the application when the app was launched to open a url.
+    bugs:
+      - https://github.com/mozilla-mobile/firefox-ios/issues/24325
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/24422
+    data_sensitivity:
+      - technical
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+    expires: "2025-07-01"
+
 # Device specific metrics
 
 device:
