Refactor FXIOS-10855 #23671 Change rating prompt request threshold & adding experiment (backport #24523)
* Change rating prompt request threshold

* Add feature flag for rating prompt

* Oups

* Create crash tracker and related tests

--- a/firefox-ios/nimbus.fml.yaml
+++ b/firefox-ios/nimbus.fml.yaml
@@ -34,6 +34,7 @@ include:
   - nimbus-features/onboardingFrameworkFeature.yaml
   - nimbus-features/passwordGeneratorFeature.yaml
   - nimbus-features/pullToRefreshRefactorFeature.yaml
+  - nimbus-features/ratingPromptFeature.yaml
   - nimbus-features/reduxSearchSettingsFeature.yaml
   - nimbus-features/remoteTabManagement.yaml
   - nimbus-features/searchFeature.yaml
