--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -730,6 +730,27 @@ app:
     notification_emails:
       - fx-ios-data-stewards@mozilla.com
     expires: "2025-07-01"
+  last_opened_as_default_browser:
+    type: datetime
+    time_unit: day
+    description: |
+      The date of when the app was last opened as default browser.
+    send_in_pings:
+      - metrics
+      - baseline
+    no_lint:
+      - BASELINE_PING
+    bugs:
+      - https://github.com/mozilla-mobile/firefox-ios/issues/FXIOS-11280
+      - https://bugzilla.mozilla.org/1941035
+    data_reviews:
+      - https://github.com/mozilla-mobile/firefox-ios/pull/
+    data_sensitivity:
+      - technical
+    notification_emails:
+      - fx-ios-data-stewards@mozilla.com
+      - glean-team@mozilla.com
+    expires: never
 
 # Usage reporting
 usage:
