FXIOS-11266 [Focus][Terms of service] Crashes are not generated in Sentry for Focus

--- a/bitrise.yml
+++ b/bitrise.yml
@@ -1824,7 +1824,7 @@ workflows:
         - content: |-
             #!/usr/bin/env bash
             set -x
-            /usr/libexec/PlistBuddy -c "Add :SentryDSN string ${SENTRY_DSN}" focus-ios/Blockzilla/Info.plist
+            /usr/libexec/PlistBuddy -c "Add :SentryDSN string ${SENTRY_DSN_FOCUS}" focus-ios/Blockzilla/Info.plist
 
   focus-set-default-browser-entitlement:
     steps:
