[MOB-3113] [MOB-3112] Set Firebase as AppCenter alternative (#832)
* [MOB-3112] Add Firebase plugin, Remove AppCenter's

* [MOB-3112] Replace AppCenter with Firebase upload

* [MOB-3112] Update CircleCI names

* [MOB-3112] Temporarily force building against the feature branch

* [MOB-3112] Update project config definition

* [MOB-3112] Revert "[MOB-3112] Temporarily force building against the feature branch"

This reverts commit 93a37f9b9b87c61ebfa56a76a6ff290cb0d1f50f.

* [MOB-3112] Gemfile update

* [MOB-3112] Revert "[MOB-3112] Revert "[MOB-3112] Temporarily force building against the feature branch""

This reverts commit 8a54975eabca8c315f060546090f09c25e41f8a1.

* [MOB-3112] Revert "[MOB-3112] Revert "[MOB-3112] Revert "[MOB-3112] Temporarily force building against the feature branch"""

This reverts commit b7208db7dc1869cc4b8d3a18857936924826b828.
# Conflicts:
#	firefox-ios/Client.xcodeproj/project.pbxproj

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -42,7 +42,7 @@ jobs:
           name: Build and deploy to Testflight
           command: bundle exec fastlane testflight_beta
 
-  build-and-deploy-appcenter-and-browserstack:
+  build-and-deploy-firebase-and-browserstack:
     <<: *environment_common
     <<: *macos_common
     steps:
@@ -71,8 +71,8 @@ jobs:
           name: Build the Ecosia app
           command: bundle exec fastlane build_ecosia_app
       - run:
-          name: Upload to AppCenter
-          command: bundle exec fastlane upload_to_appcenter
+          name: Upload to Firebase
+          command: bundle exec fastlane upload_to_firebase
       - run:
           name: Upload to Browserstack
           command: bundle exec fastlane upload_to_browserstack
@@ -104,8 +104,8 @@ workflows:
               only: /^beta.*/
             branches:
               ignore: /.*/
-      - build-and-deploy-appcenter-and-browserstack:
-          name: Deploy ad-hoc version over AppCenter + Upload to Browserstack
+      - build-and-deploy-firebase-and-browserstack:
+          name: Deploy ad-hoc version over Firebase + Upload to Browserstack
           filters:
             branches:
               only: 
