Refactor FXIOS-24412 Remove Redundant Type Declaration in TabLocationView (#24476)
* remove redundant type declaration in TabLocationView

* updated swiftlint.yml to catch redundant type annotation

* Correct all swiftlint issue related to redundant type annotation

--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -112,6 +112,9 @@ file_header:
                     // License, v. 2.0. If a copy of the MPL was not distributed with this
                     // file, You can obtain one at http://mozilla.org/MPL/2.0/
 
+redundant_type_annotation:
+  consider_default_literal_types_redundant: true
+
 analyzer_rules: # Rules run by `swiftlint analyze`
   - unused_import
 
