Dispatch locales depending on the day of week

--- a/.github/workflows/focus-ios-l10n-screenshots.yml
+++ b/.github/workflows/focus-ios-l10n-screenshots.yml
@@ -7,7 +7,7 @@ on:
                 required: true
                 type: string
     schedule:
-        - cron: "0 4 * * 0"
+        - cron: "0 4 * * 1,3,5"
 
 jobs:
     get-screenshots:
@@ -35,7 +35,17 @@ jobs:
             - name: Generate screenshots
               continue-on-error: true
               run: |
-                  focus-ios/l10n-screenshots.sh --test-without-building ab, af, an, ar, az, be, bg, bn, bo, br, bs, ca, co, cs, cy, da, de, el, en-CA, en-GB, en-US, eo, es, es-AR, es-CL, es-ES, es-MX, et, eu, fa, zh-TW
+                  # Process selected locales depending on the day of week
+                  day_of_week=`date +%u`
+                  locales=en-US
+                  if [[ "$locales" == "1" ]]; then
+                    locales="ab, af, an, ar, az, be, bg, bn, bo, br, bs, ca, co, cs, cy, da, de, el, en-CA, en-GB, en-US, eo, es, es-AR, es-CL, es-ES, es-MX, et, eu, fa, zh-TW"
+                  elif [[ "$locales" == "3" ]]; then
+                    locales="fi, fr, ga-IE, gd, gl, gu-IN, he, hi-IN, hr, hu, hy-AM, ia, id, is, it, ja, jv, ka, kk, km, kn, ko, lo, lt, lv, ml, mr, ms, my, nb-NO"
+                  elif [[ "$locales" == "5" ]]; then
+                    locales="ne-NP, nl, nn-NO, oc, or, pa-IN, pl, pt-BR, pt-PT, rm, ro, ru, si, sk, sl, sq, su, sv-SE, ta, te, th, tl, tr, tt, ug, uk, ur, uz, vi, zh-CN"
+                  fi
+                  focus-ios/l10n-screenshots.sh --test-without-building $locales
             - name: Upload screenshots
               uses: actions/upload-artifact@v4.3.3
               with:
