Have unique IDs in uploaded screenshots file

--- a/.github/workflows/focus-ios-l10n-locales.yml
+++ b/.github/workflows/focus-ios-l10n-locales.yml
@@ -51,4 +51,4 @@ jobs:
         with:
           path: ./l10n-screenshots
           retention-days: 90
-          name: Screenshots
+          name: Screenshots-${{ job.container.id }}
