--- a/.github/workflows/focus-ios-l10n-screenshots.yml
+++ b/.github/workflows/focus-ios-l10n-screenshots.yml
@@ -86,3 +86,16 @@ jobs:
       locales: "${{ matrix.locales }}"
       branch: "${{ inputs.branch }}"
       derived-data: "xcode-l10n-focus-cache-deriveddata-${{ github.workflow }}-${{ github.sha }}"
+
+  merge-screenshots:
+    name: Merge all screenshots
+    needs: generate-screenshots
+    runs-on: macOS-15
+    steps:
+      - name: Merge screenshots
+        uses: actions/upload-artifact/merge@v4
+        with:
+          name: FocusL10nScreenshots
+          pattern: Screenshots-*
+          delete-merged: true
+          retention-days: 14
