--- a/firefox-ios/Client/Configuration/Firefox.xcconfig
+++ b/firefox-ios/Client/Configuration/Firefox.xcconfig
@@ -8,6 +8,6 @@
 MOZ_BUNDLE_DISPLAY_NAME = Firefox
 MOZ_BUNDLE_ID = org.mozilla.ios.Firefox
 CODE_SIGN_ENTITLEMENTS = Client/Entitlements/FirefoxApplication.entitlements
-CHANNEL = release
+CHANNEL = RELEASE
 OTHER_SWIFT_FLAGS = $(OTHER_SWIFT_FLAGS_common) -DMOZ_CHANNEL_$(CHANNEL)
 MOZ_INTERNAL_URL_SCHEME = firefox-internal
