--- a/firefox-ios/Client/Configuration/Fennec.enterprise.xcconfig
+++ b/firefox-ios/Client/Configuration/Fennec.enterprise.xcconfig
@@ -11,7 +11,7 @@ MOZ_BUNDLE_ID = org.mozilla.ios.FennecEnterprise
 INCLUDE_SETTINGS_BUNDLE = YES
 MOZ_TODAY_WIDGET_SEARCH_DISPLAY_NAME = Firefox - Search
 CODE_SIGN_ENTITLEMENTS = Client/Entitlements/FennecEnterpriseApplication.entitlements
-CHANNEL = DEVELOPER
+CHANNEL = developer
 OTHER_SWIFT_FLAGS = $(OTHER_SWIFT_FLAGS_common) -DMOZ_CHANNEL_$(CHANNEL)
 MOZ_INTERNAL_URL_SCHEME = fennec
 
