--- a/firefox-ios/Client/Configuration/Common.xcconfig
+++ b/firefox-ios/Client/Configuration/Common.xcconfig
@@ -35,3 +35,4 @@ DYLIB_COMPATIBILITY_VERSION = 1;
 DYLIB_CURRENT_VERSION = 1;
 DYLIB_INSTALL_NAME_BASE = @rpath
 PRODUCT_BUNDLE_IDENTIFIER = org.mozilla.ios.$(PRODUCT_NAME)
+MOZ_STICKER_EXTENSION_DISPLAY_NAME = Firefox - Stickers
