--- a/firefox-ios/sticker/Info.plist
+++ b/firefox-ios/sticker/Info.plist
@@ -6,6 +6,10 @@
 	<string>137.0</string>
 	<key>CFBundleVersion</key>
 	<string>1</string>
+	<key>CFBundleIdentifier</key>
+	<string>$(PRODUCT_BUNDLE_IDENTIFIER)</string>
+	<key>CFBundleDisplayName</key>
+	<string>$(MOZ_BUNDLE_DISPLAY_NAME)</string>
 	<key>NSExtension</key>
 	<dict>
 		<key>NSExtensionPointIdentifier</key>
