--- a/bitrise.yml
+++ b/bitrise.yml
@@ -2137,5 +2137,5 @@ trigger_map:
 
 meta:
   bitrise.io:
-    stack: osx-xcode-16.2.x-edge
+    stack: osx-xcode-16.2.x
     machine_type_id: g2-m1.8core
