add Nimbus ping and submit it on RecordedNimbusContext.record completion

--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -6595,3 +6595,5 @@ nimbus_system:
       - chumphreys@mozilla.com
       - project-nimbus@mozilla.com
     expires: never
+    send_in_pings:
+      - nimbus
