--- a/firefox-ios/nimbus-features/toolbarRefactorFeature.yaml
+++ b/firefox-ios/nimbus-features/toolbarRefactorFeature.yaml
@@ -53,6 +53,4 @@ enums:
       baseline:
         description: The default layout of the toolbars.
       version1:
-        description: Shows the share and tabs button in the navigation toolbar. The menu button is displayed in the address toolbar.
-      version2:
-        description: Shows the tabs and menu button in the navigation toolbar. The share button is displayed in the address toolbar.
+        description: Shows the add new tab, menu and tabs button in the navigation toolbar. The share button is displayed in the address toolbar.
