Add EXP-5154 add Nimbus ping and submit it on RecordedNimbusContext.record completion (#24950)
* add Nimbus ping and submit it on RecordedNimbusContext.record completion

* update for PR feedback and add data-review link

* remove redundant public access modifier

* remove followsCollectionEnabled and setEnabled based on PR feedback

* update nimbus ping to send client_id

--- a/firefox-ios/Client/metrics.yaml
+++ b/firefox-ios/Client/metrics.yaml
@@ -6646,3 +6646,5 @@ nimbus_system:
       - chumphreys@mozilla.com
       - project-nimbus@mozilla.com
     expires: never
+    send_in_pings:
+      - nimbus
