--- a/.github/workflows/focus-ios-l10n-linter.yml
+++ b/.github/workflows/focus-ios-l10n-linter.yml
@@ -50,7 +50,7 @@ jobs:
           (cd code_repo && ./focus-ios/focus-ios-tests/tools/export-strings.sh)
       - name: Check reference locale
         run: |
-          moz-xliff-lint --path code_repo/focus-ios/focusios-l10n/en-US --config code_repo/.github/l10n/linter_config_focus.json
+          (cd code_repo && moz-xliff-lint --path focus-ios/focusios-l10n/en-US --config .github/l10n/linter_config_focus.json)
       - name: Upload artifact
         uses: actions/upload-artifact@v4
         with:
