--- a/firefox-ios/Client/Configuration/Firefox.xcconfig
+++ b/firefox-ios/Client/Configuration/Firefox.xcconfig
@@ -4,6 +4,7 @@
 
 #include "Common.xcconfig"
 #include "Release.xcconfig"
+#include "version.xcconfig"
 
 MOZ_BUNDLE_DISPLAY_NAME = Firefox
 MOZ_BUNDLE_ID = org.mozilla.ios.Firefox
