--- a/firefox-ios/Client/Configuration/FirefoxBeta.xcconfig
+++ b/firefox-ios/Client/Configuration/FirefoxBeta.xcconfig
@@ -4,6 +4,7 @@
 
 #include "Common.xcconfig"
 #include "Release.xcconfig"
+#include "version.xcconfig"
 
 MOZ_BUNDLE_DISPLAY_NAME = Firefox Beta
 MOZ_BUNDLE_ID = org.mozilla.ios.FirefoxBeta
